# NotebookAssistant

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  notebook.ipynb  pyproject.toml
.github/workflows/: publish.yml  test.yml
examples/: quickstart.ipynb  sample_documentation.md
src/notebook_assistant/: __init__.py  assistant.py  llm_client.py  prompts.py  utils.py
tests/: conftest.py  test_assistant.py  test_llm_client.py  test_utils.py
